# llm-summarization

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
src/: __init__.py  config.py  llm_integration.py  pdf_processor.py  vector_store.py
tests/: __init__.py  test_app.py
